--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://data1010.github.io"
+url: "http://browndsi.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: DATA 1010
+title: Brown DSI
 
 # Short description of your site
-description: Probability, Statistics, and Machine Learning
+description: Links for DSI master's students
 
 # --- Navigation bar options --- #
 
@@ -29,8 +29,8 @@ navbar-links:
   Resources:
     - Data Gymnasia: "https://mathigon.org/data-gymnasia"
     - Python Data Science Handbook: "https://jakevdp.github.io/PythonDataScienceHandbook/"
+    - R for Data Science: "https://r4ds.had.co.nz"
     - Julia-Python-R cheatsheet: "docs/cheatsheets/jpr-cheatsheet.pdf"
-    - Plots.jl cheatsheet: "docs/cheatsheets/plotsjl-cheatsheet.pdf"
     - Preliminaries cheatsheet: "docs/cheatsheets/prelim-cheatsheet.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
